Fix 2D button styling on mobile
- Add CSS cache buster to force reload of styles
- Add -webkit-appearance: none to override iOS default button styles
- Change icon back to "box" per Sam's request

--- a/css/style.css
+++ b/css/style.css
@@ -860,6 +860,9 @@ body::-webkit-scrollbar {
 
 /* 2D mode toggle - styled exactly like camera button */
 #2d-mode-toggle {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     width: 32px;
     min-width: 32px;
     height: auto;
